<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appName "nEdge">
    <!ENTITY author "suihan">
    ]>

<resources>
    <string name="app_name" translatable="false">&appName;</string>
    <string name="copyright" translatable="false">Copyright \u00A9 %s &lt;a href=&quot;https://suihan74.github.io&quot;&gt;&author;&lt;/a&gt;</string>

    <!-- dialog -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="confirm_dialog_title">Confirmation</string>

    <!-- direction -->
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="top_left">Top Left</string>
    <string name="top_right">Top Right</string>
    <string name="bottom_left">Bottom Left</string>
    <string name="bottom_right">Bottom Right</string>

    <!-- ====== -->

    <!-- DEVICE_ADMIN -->
    <string name="device_admin_desc">&appName; requires DEVICE_ADMIN in order to turn screen off and lock from the application</string>

    <!-- ====== -->

    <!-- PermissionsValidationActivity -->
    <string name="permission_activity_title">Permissions</string>
    <string name="permission_activity_desc">You need to enable all permissions for using &appName;.</string>

    <string name="permission_device_policy_manager_text">register &appName; as a device admin app</string>
    <string name="permission_device_policy_manager_desc">This permission is required to turn off screen from &appName;.\nIf you want to uninstall &appName;, you need to remove this permission.</string>
    <string name="permission_remove_device_policy_manager_desc">Are you sure you want to remove the permission as a device admin app?</string>

    <string name="permission_manage_overlay_text">enable drawing &appName; on top of other apps</string>
    <string name="permission_manage_overlay_desc">This permission is required to overlay &appName; on the lock screen.</string>

    <string name="permission_notification_listener_text">enable to listen all notifications</string>
    <string name="permission_notification_listener_desc">This permission is required to detect and handle all notifications.</string>

    <!-- ====== -->

    <!-- PreferencesActivity -->

    <!-- Preferences Menus -->
    <string name="prefs_menu_label_generals">General</string>
    <string name="prefs_menu_label_notification_settings">Notifications</string>
    <string name="prefs_menu_label_black_list">Exclusion Settings</string>
    <string name="prefs_menu_label_information">App Info</string>
    <string name="prefs_menu_label_release_notes">Release Notes</string>

    <!-- GeneralPrefsFragment -->
    <string name="prefs_preview_button_text">Preview</string>
    <string name="prefs_notify_button_text">Notify after 5sec</string>
    <string name="prefs_app_enabled_desc">Enabled Status</string>
    <string name="prefs_app_enabled_button_text">Launch nEdge at notification</string>
    <string name="prefs_silent_timezone_desc">Silent timezone</string>
    <string name="prefs_silent_timezone_separator">~</string>
    <string name="prefs_light_off_interval_desc">Waiting time for the screen to go dark (0: always bright)</string>
    <string name="prefs_termination_interval_desc">Waiting time for nEdge to terminate (0: keep running)</string>
    <string name="prefs_light_off_interval_hint">Seconds</string>
    <string name="prefs_required_battery_level_desc">Required battery level in order to launch (0: regardless of battery level)</string>
    <string name="prefs_multi_notices_solution_selection_desc">The solution to display multiple notifications</string>
    <string name="prefs_unknown_notice_solution_selection_desc">The solution to handle notifications which are not registered</string>
    <string name="prefs_light_level_off_desc">Screen brightness on after going dark (minus: more dark)</string>
    <string name="prefs_light_level_on_desc">Screen brightness immediately after launch</string>
    <string name="prefs_use_system_light_level_on_desc">Use the system screen value</string>
    <string name="prefs_clock_style_desc">Clock Format</string>
    <string name="prefs_clock_text_size_desc">Clock Font Size</string>
    <string name="denied_notification_permission">Notification permission request denied. cannot to send the dummy notification.</string>

    <!-- SettingEditorFragment -->
    <string name="prefs_save">Save</string>
    <string name="prefs_cancel">Cancel</string>
    <string name="prefs_display_name_hint">Label (Display name)</string>
    <string name="prefs_keyword_hint">Additional Keywords</string>
    <string name="prefs_clock_text_color_desc">Clock Text Color</string>
    <string name="prefs_information_display_mode_desc">Notification message displaying mode</string>
    <string name="prefs_notification_line_color_desc">Line Color</string>
    <string name="prefs_apply_application_color_desc">Apply App Color</string>
    <string name="prefs_line_width_desc">Line Thickness</string>
    <string name="prefs_blur_size_desc">Blur Level (0: disable blur)</string>
    <string name="prefs_enabled_outlines_desc">Edges and Corners for displaying outlines</string>
    <string name="prefs_enabled_edge">%s edge</string>
    <string name="prefs_enabled_corner">%s corner</string>
    <string name="prefs_top_corner_radius_desc">Corner radius at the top of the screen</string>
    <string name="prefs_bottom_corner_radius_desc">Corner radius at the bottom of the screen</string>
    <string name="prefs_edge_offset_desc">%s edge offset</string>
    <string name="prefs_top_notch_type_selection_desc">Top notch type</string>
    <string name="prefs_bottom_notch_type_selection_desc">Bottom notch type</string>

    <!-- BlackListItemEditorDialogFragment -->
    <string name="prefs_black_list_item_editor_title">Select an app that is ignored</string>

    <!-- RectangleNotchSettingFragment -->
    <string name="prefs_rectangle_notch_major_width_adjustment_desc">Major width adjustment ratio</string>
    <string name="prefs_rectangle_notch_minor_width_adjustment_desc">Minor width adjustment ratio</string>
    <string name="prefs_rectangle_notch_height_adjustment_desc">Height adjustment ratio</string>
    <string name="prefs_rectangle_notch_major_radius_desc">Major corner radius</string>
    <string name="prefs_rectangle_notch_minor_radius_desc">Minor corner radius</string>

    <!-- WaterDropNotchSettingFragment -->
    <string name="prefs_water_drop_notch_width_adjustment_desc">Width adjustment ratio</string>
    <string name="prefs_water_drop_notch_height_adjustment_desc">Height adjustment ratio</string>
    <string name="prefs_water_drop_notch_radius_desc">Water drop radius</string>

    <!-- PunchHoleNotchSettingFragment -->
    <string name="prefs_punch_hole_notch_cx_desc">X-Coordinate</string>
    <string name="prefs_punch_hole_notch_cy_desc">Y-Coordinate</string>
    <string name="prefs_punch_hole_notch_radius_desc">Radius</string>
    <string name="prefs_punch_hole_horizontal_edge_size_desc">Additional width</string>
    <string name="prefs_punch_hole_vertical_edge_size_desc">Additional height</string>

    <!-- CornerNotchSettingFragment -->
    <string name="prefs_corner_notch_major_width_adjustment_desc">Major width adjustment ratio</string>
    <string name="prefs_corner_notch_minor_width_adjustment_desc">Minor width adjustment ratio</string>
    <string name="prefs_corner_notch_height_adjustment_desc">Height adjustment ratio</string>
    <string name="prefs_corner_notch_major_radius_desc">Radius from a horizontal edge to the notch</string>
    <string name="prefs_corner_notch_middle_radius_desc">Radius of the notch</string>
    <string name="prefs_corner_notch_minor_radius_desc">Radius from the notch to a vertical edge</string>

    <!-- SettingsListFragment -->
    <string name="prefs_settings_list_default_setting_text">Default Settings</string>
    <string name="prefs_settings_list_search_hint">Keywords</string>

    <string name="prefs_settings_list_item_menu_edit">Edit</string>
    <string name="prefs_settings_list_item_menu_preview">Preview</string>
    <string name="prefs_settings_list_item_menu_copy_from_default">Copy shapes from default</string>
    <string name="prefs_settings_list_item_menu_copy">Create a copy</string>
    <string name="prefs_settings_list_item_menu_delete">Delete</string>

    <string name="prefs_settings_list_copy_shapes_description">Are you sure you want to copy shapes from default settings?</string>
    <string name="prefs_settings_list_copy_shapes_success">Completed copying shapes from default settings</string>
    <string name="prefs_settings_list_copy_shapes_failure">Failed to copy shapes</string>

    <string name="pref_default_setting_menu_copy_shapes_to_items">Copy shapes to all settings</string>

    <!-- InformationFragment -->
    <string name="pref_information_release_notes_desc">ReleaseNote</string>
    <string name="pref_information_licenses_desc">Licenses</string>

    <!-- ApplicationSelectionDialogFragment -->
    <string name="pref_app_selection_dialog_title">Select an app</string>

    <!-- ====== -->

    <!-- InformationDisplayMode -->
    <string name="information_display_mode_none">Hidden</string>
    <string name="information_display_mode_full">Label, Title and Message</string>
    <string name="information_display_mode_label">Label only</string>
    <string name="information_display_mode_title">Title only</string>
    <string name="information_display_mode_text">Message only</string>
    <string name="information_display_mode_title_and_text">Title and Message</string>
    <string name="information_display_mode_label_and_title">Label and Title</string>
    <string name="information_display_mode_label_and_text">Label and Message</string>

    <!-- NotchType -->
    <string name="notch_type_none">NONE</string>
    <string name="notch_type_rectangle">Rectangle</string>
    <string name="notch_type_water_drop">Water drop</string>
    <string name="notch_type_punch_hole">Punch hole</string>
    <string name="notch_type_corner">Corner</string>

    <!-- MultipleNotificationsSolution -->
    <string name="multi_notices_solution_latest">Only Latest one</string>
    <string name="multi_notices_solution_switch_in_order">Switch in order</string>
    <string name="multi_notices_solution_switch_randomly">Switch randomly</string>

    <!-- UnknownNotificationSolution -->
    <string name="unknown_notice_solution_default">Show with default setting</string>
    <string name="unknown_notice_solution_ignore">Ignore</string>

    <!-- KeywordMatchingType -->
    <string name="keyword_matching_type_none">NONE</string>
    <string name="keyword_matching_type_include">Include</string>
    <string name="keyword_matching_type_exclude">Exclude</string>
</resources>
