<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.suihan74.nedge.scenes.preferences.notch.CornerNotchSettingViewModel"/>
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/prefs_corner_notch_major_width_adjustment_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.suihan74.nedge.scenes.preferences.SliderWithButtons
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            editing="@={vm.editing}"
            value="@={vm.majorWidthAdjustment}"
            stepSize="@{0.01f}"
            valueFrom="@{-0.7f}"
            valueTo="@{0.7f}" />

        <TextView
            android:text="@string/prefs_corner_notch_minor_width_adjustment_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.suihan74.nedge.scenes.preferences.SliderWithButtons
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            editing="@={vm.editing}"
            value="@={vm.minorWidthAdjustment}"
            stepSize="@{0.01f}"
            valueFrom="@{-0.7f}"
            valueTo="@{0.7f}" />

        <TextView
            android:text="@string/prefs_corner_notch_height_adjustment_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.suihan74.nedge.scenes.preferences.SliderWithButtons
            android:id="@+id/heightAdjustmentSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            editing="@={vm.editing}"
            value="@={vm.heightAdjustment}"
            stepSize="@{0.01f}"
            valueFrom="@{-1.0f}"
            valueTo="@{1.0f}" />

        <TextView
            android:text="@string/prefs_corner_notch_major_radius_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.suihan74.nedge.scenes.preferences.SliderWithButtons
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            editing="@={vm.editing}"
            value="@={vm.majorRadius}"
            stepSize="@{0.2f}"
            valueFrom="@{0.0f}"
            valueTo="@{50.0f}" />

        <TextView
            android:text="@string/prefs_corner_notch_minor_radius_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.suihan74.nedge.scenes.preferences.SliderWithButtons
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            editing="@={vm.editing}"
            value="@={vm.minorRadius}"
            stepSize="@{0.2f}"
            valueFrom="@{0.0f}"
            valueTo="@{50.0f}" />

        <TextView
            android:text="@string/prefs_corner_notch_middle_radius_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.suihan74.nedge.scenes.preferences.SliderWithButtons
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            editing="@={vm.editing}"
            value="@={vm.middleRadius}"
            stepSize="@{0.2f}"
            valueFrom="@{0.0f}"
            valueTo="@{50.0f}" />

    </LinearLayout>
</layout>
