<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.suihan74.notificationreporter.scenes.preferences.notch.PunchHoleNotchSettingViewModel"/>
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/prefs_punch_hole_notch_cx_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.slider.Slider
            android:valueFrom="0.0"
            android:valueTo="1.0"
            android:stepSize="0.001"
            android:value="@={vm.cx}"
            editing="@={vm.editing}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/prefs_punch_hole_notch_cy_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.slider.Slider
            android:valueFrom="0.0"
            android:valueTo="1.0"
            android:stepSize="0.0001"
            android:value="@={vm.cy}"
            editing="@={vm.editing}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/prefs_punch_hole_notch_radius_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.slider.Slider
            android:valueFrom="0.0"
            android:valueTo="200.0"
            android:stepSize="1.0"
            android:value="@={vm.radius}"
            editing="@={vm.editing}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/prefs_punch_hole_horizontal_edge_size_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.slider.Slider
            android:valueFrom="0.0"
            android:valueTo="200.0"
            android:stepSize="1.0"
            android:value="@={vm.horizontalEdgeSize}"
            editing="@={vm.editing}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/prefs_punch_hole_vertical_edge_size_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.slider.Slider
            android:valueFrom="0.0"
            android:valueTo="200.0"
            android:stepSize="1.0"
            android:value="@={vm.verticalEdgeSize}"
            editing="@={vm.editing}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>
