<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.suihan74.nedge.scenes.permissions.PermissionsValidationViewModel" />
        <variable
            name="activity"
            type="androidx.appcompat.app.AppCompatActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/preferencesBackgroundColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:text="@string/permission_activity_title"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/description"
            android:text="@string/permission_activity_desc"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintStart_toEndOf="@id/title"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/appIcon"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@null"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp"
            android:layout_width="96dp"
            android:layout_height="96dp"/>

        <TextView
            android:id="@+id/appName"
            android:text="@string/app_name"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/appIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/devicePolicyManagerButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:onClick="@{() -> vm.requestDevicePolicyManagerPermission(activity)}"
            iconState="@{vm.devicePolicyManagerState}"
            iconTrue="@{@drawable/ic_check}"
            iconFalse="@{@drawable/ic_edit}"
            app:layout_constraintTop_toBottomOf="@id/appName"
            app:layout_constraintBottom_toTopOf="@id/manageOverlayButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.85"
            app:layout_constraintVertical_chainStyle="spread"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_device_policy_manager_text" />

        <TextView
            android:id="@+id/devicePolicyManagerDesc"
            android:text="@string/permission_device_policy_manager_desc"
            app:layout_constraintTop_toBottomOf="@id/devicePolicyManagerButton"
            app:layout_constraintStart_toStartOf="@id/devicePolicyManagerButton"
            app:layout_constraintEnd_toEndOf="@id/devicePolicyManagerButton"
            app:layout_constraintHorizontal_bias="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manageOverlayButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:onClick="@{() -> vm.requestManageOverlayPermission(activity)}"
            iconState="@{vm.manageOverlayState}"
            iconTrue="@{@drawable/ic_check}"
            iconFalse="@{@drawable/ic_edit}"
            app:layout_constraintTop_toBottomOf="@id/devicePolicyManagerButton"
            app:layout_constraintBottom_toTopOf="@id/notificationListenerButton"
            app:layout_constraintStart_toStartOf="@id/devicePolicyManagerButton"
            app:layout_constraintEnd_toEndOf="@id/devicePolicyManagerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_manage_overlay_text" />

        <TextView
            android:id="@+id/manageOverlayDesc"
            android:text="@string/permission_manage_overlay_desc"
            app:layout_constraintTop_toBottomOf="@id/manageOverlayButton"
            app:layout_constraintStart_toStartOf="@id/manageOverlayButton"
            app:layout_constraintEnd_toEndOf="@id/manageOverlayButton"
            app:layout_constraintHorizontal_bias="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/notificationListenerButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:text="@string/permission_notification_listener_text"
            android:onClick="@{() -> vm.requestNotificationListenerPermission()}"
            iconState="@{vm.notificationListenerState}"
            iconTrue="@{@drawable/ic_check}"
            iconFalse="@{@drawable/ic_edit}"
            app:layout_constraintTop_toBottomOf="@id/manageOverlayButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/devicePolicyManagerButton"
            app:layout_constraintEnd_toEndOf="@id/devicePolicyManagerButton"
            android:layout_marginBottom="48dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/notificationListenerDesc"
            android:text="@string/permission_notification_listener_desc"
            app:layout_constraintTop_toBottomOf="@id/notificationListenerButton"
            app:layout_constraintStart_toStartOf="@id/notificationListenerButton"
            app:layout_constraintEnd_toEndOf="@id/notificationListenerButton"
            app:layout_constraintHorizontal_bias="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
