<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingStart="15dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/appIcon"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/appName"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/appIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/appVersion"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/copyright"
        android:text="@string/copyright"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appVersion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"/>

    <Button
        android:id="@+id/showReleaseNotesButton"
        android:text="@string/pref_information_release_notes_desc"
        app:layout_constraintTop_toBottomOf="@id/copyright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/showLicensesButton"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/showLicensesButton"
        android:text="@string/pref_information_licenses_desc"
        app:layout_constraintTop_toTopOf="@id/showReleaseNotesButton"
        app:layout_constraintStart_toEndOf="@id/showReleaseNotesButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>
