<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.suihan74.nedge.scenes.preferences.notch.WaterDropNotchSettingViewModel"/>
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/prefs_water_drop_notch_width_adjustment_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.suihan74.nedge.scenes.preferences.SliderWithButtons
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            editing="@={vm.editing}"
            value="@={vm.widthAdjustment}"
            stepSize="@{0.002f}"
            valueFrom="@{-1.0f}"
            valueTo="@{0.5f}" />

        <TextView
            android:text="@string/prefs_water_drop_notch_height_adjustment_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.suihan74.nedge.scenes.preferences.SliderWithButtons
            android:id="@+id/heightAdjustmentSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            editing="@={vm.editing}"
            value="@={vm.heightAdjustment}"
            stepSize="@{0.2f}"
            valueFrom="@{0.0f}"
            valueTo="@{25.0f}" />

        <TextView
            android:text="@string/prefs_water_drop_notch_radius_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.suihan74.nedge.scenes.preferences.SliderWithButtons
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            editing="@={vm.editing}"
            value="@={vm.majorRadius}"
            stepSize="@{0.2f}"
            valueFrom="@{0.0f}"
            valueTo="@{60.0f}" />

    </LinearLayout>
</layout>
